# s-expr-skidl

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: and_gate.py  auto_populate_mpn.py  voltage_divider.py
sform_skidl/: __init__.py  api.py  bom.py  compat.py  geometry.py  hierarchy.py  hierarchy_analyzer.py  layout.py  network.py  parts_db.py  routing.py  spice.py
sform_skidl/data/: capacitors_basic.csv  discretes_basic.csv  ics_basic.csv  resistors_basic.csv
sform_skidl/io/: __init__.py  schematic_io.py  symbol_lib.py
sform_skidl/models/: __init__.py  bus.py  net.py  part.py  pin.py  sheet_part.py  symbol.py
sform_skidl/sexpr/: __init__.py  parser.py  writer.py
tests/: test_advanced_coverage.py  test_coverage.py  test_features.py  test_integration.py  test_new_features.py  test_sexpr.py
